ui: Fix mobile phone notch covering header and footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 // Avoid "the notch" on iPhones and Pixel phones
 @supports (width: env(safe-area-inset-left)) {
   @media only screen and (orientation: landscape) {
-    body main {
+    body {
       padding-left: env(safe-area-inset-left);
       padding-right: env(safe-area-inset-right);
     }
